--- a/client/customers-home.html
+++ b/client/customers-home.html
@@ -6,10 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>form for export customers</h3>
-    <form method="get" action="/customers-export">
+    <h3>Export customers</h3>
+    <form method="get" action="/customers/export">
         <button type="submit">Export Customers</button>
     </form>
+
+
 
     <h3>Add customer</h3>
     <form method="post" action="/customers">
