--- a/client/customers-home.html
+++ b/client/customers-home.html
@@ -6,31 +6,37 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Export customers</h3>
-    <form method="get" action="/customers/export">
-        <button type="submit">Export Customers</button>
+    <h3>get all customers</h3>
+    <form method="get" action="/customers">
+        <button type="submit">Get All Customers</button>
     </form>
 
 
+    <h3>export customers</h3>
+    <form method="get" action="/export">
+        <button type="submit">Export Customers</button>
+    </form>
 
-    <h3>Add customer</h3>
-    <form method="post" action="/customers">
+    
+    <h3>add customer</h3>
+    <form method="post" action="/customers" >
         <div>
-            <label>Name:</label>
-            <input type="text" name="name">
+            <label for="name">Name:</label>
+            <input type="text" name="name" id="name">
         </div>
         <div>
-            <label>Phone:</label>
-            <input type="text" name="phone">
+            <label for="phone">Phone:</label>
+            <input type="text" name="phone" id="phone">
         </div>
         <div>
-            <label>Email:</label>
-            <input type="email" name="email">
+            <label for="phone">Email:</label>
+            <input type="email" name="email" id="email">
         </div>
         <div>
-            <label>Country:</label>
-            <input type="number" name="countryInputHtml">
+            <label for="country">Country:</label>
+            <input type="number" name="country" id="country">
         </div>
+        
         <button type="submit">Add Customer</button>
     </form>
 </body>
