--- a/client/customers-home.html
+++ b/client/customers-home.html
@@ -8,6 +8,15 @@
 <body>
     <h3>get all customers</h3>
     <form method="get" action="/customers">
+        <select name="column">
+            <option value="name">Sort by customer name</option>
+            <option value="email">Sort by customer email</option>
+            <option value="country_id">Sort by country</option>
+        </select>
+        <select name="sort">
+            <option value="ASC">Sort A-Z</option>
+            <option value="DESC">Sort Z-A</option>
+        </select>
         <button type="submit">Get All Customers</button>
     </form>
 
