sort customers by parameters

--- a/client/customers-home.html
+++ b/client/customers-home.html
@@ -11,7 +11,7 @@
         <select name="column">
             <option value="name">Sort by customer name</option>
             <option value="email">Sort by customer email</option>
-            <option value="country_id">Sort by country</option>
+            <option value="country_name">Sort by country</option>
         </select>
         <select name="sort">
             <option value="ASC">Sort A-Z</option>
