--- a/client/login.html
+++ b/client/login.html
@@ -8,10 +8,16 @@
 <body>
 
     <form method="post" action="/login">
-        <div><input type="email" name="email"></div>
-        <div><input type="password" name="password"></div>
+        <div>
+            <label>Email:</label>
+            <input type="email" name="email">
+        </div>
+        <div>
+            <label>Password:</label>
+            <input type="password" name="password">
+        </div>
+
         <button type="submit">Login</button>
     </form>
-    
 </body>
 </html>
