--- a/client/customers-home.html
+++ b/client/customers-home.html
@@ -49,7 +49,7 @@
         </div>
         <div>
             <label>Country:</label>
-            <input type="number" name="countryInputHtml">
+            <input type="text" name="countryId" value="6294d98cc6c0700b2e876d82">
         </div>
         
         <button type="submit">Add Customer</button>
