--- a/client/orders-home.html
+++ b/client/orders-home.html
@@ -34,7 +34,7 @@
         </div>
         <div>
             <label for="country">Country:</label>
-            <input type="number" name="countryInputHtml" id="country">
+            <input type="number" name="countryId" id="country">
         </div>
         
         <button type="submit">Add Orders</button>
